# rust-derive-vm

./: .envrc  .gitignore  Cargo.toml  README.md  bench.sh  flake.nix  perf.data  rust-toolchain.toml  rustfmt.toml  shell.nix  typescript
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/x86_64/: assembler.rs  mod.rs
class-graph/: Cargo.toml
class-graph/src/: annotations.rs  class_loader.rs  executable.rs  field.rs  lib.rs  member.rs  modifiers.rs  package.rs  signature.rs  type.rs  verification.rs
class-graph/src/class/: lifetime.rs  mod.rs
classfile/: Cargo.toml
classfile/src/: attributes.rs  lib.rs  symbol.rs
jvm/: Cargo.toml
jvm-core/: Cargo.toml
jvm-core/src/: aot.rs  context.rs  lib.rs  runtime.rs  singleton.rs  task.rs
jvm-core/src/memory/: buffer.rs  object.rs  ty.rs
jvm/src/: main.rs
lexical/: Cargo.toml
lexical-derive/: Cargo.toml
lexical-derive/src/: lib.rs
lexical-test/: Cargo.toml
lexical-test/src/: lib.rs
lexical/src/: lib.rs
memory-impl/memory-mmmu/: Cargo.toml
memory-impl/memory-mmmu/src/: .alloc.rs.rustfmt  alloc.rs  gc.rs  graph.rs  heap.rs  layout.rs  lib.rs  mark.rs  metadata.rs  object.rs  plan.rs  references.rs  runtime_instruction_set.rs  scanner.rs
os/: Cargo.toml
os/src/: lib.rs
os/src/linux/: mem.rs  mod.rs  thread.rs
runtime/: Cargo.toml
runtime-derive/: Cargo.toml
runtime-derive-test/: Cargo.toml
runtime-derive-test/src/: lib.rs
runtime-derive/src/: function.rs  instruction.rs  instruction_set.rs  lib.rs  vm_type.rs
runtime-extra/: Cargo.toml
runtime-extra/src/: instructions.rs  lib.rs  ty.rs
runtime-impl/interpreter/: Cargo.toml
runtime-impl/interpreter/src/: enter_point.rs  genarator.rs  jit.rs  lib.rs
runtime-impl/llvm-runtime/: Cargo.toml
runtime-impl/llvm-runtime/src/: context.rs  genarator.rs  generator.rs  interpreter.rs  jit.rs  lib.rs  raw_llvm.rs
runtime-impl/template_interpreter/: Cargo.toml
runtime-memory/runtime-memory-mmmu/: Cargo.toml
runtime-memory/runtime-memory-mmmu/src/runtime-memory-arch/: mod.rs  template_interpreter_x86_64.rs
runtime-test/: .debug.lua  Cargo.toml
runtime-test/src/: lib.rs
runtime/src/: code.rs  instructions.rs  lib.rs  mem.rs
runtime/src/bytecode/: code.rs  constant_pool.rs  frame.rs  immediate.rs  mod.rs  verify.rs
runtime/src/interpreter/: mod.rs
runtime/src/interpreter/template_interpreter/: checking.rs  mod.rs
runtime/src/runtime-arch/: mod.rs
runtime/src/runtime-arch/template_interpreter_x86_64/: deployment.rs  functions.rs  mod.rs  templates.rs
syntax/: Cargo.toml
syntax-derive/: Cargo.toml
syntax-derive/src/: lib.rs  ll1.rs  lr1.rs  parse.rs  production.rs
syntax-test/: Cargo.toml
syntax-test/src/: lib.rs
syntax/src/: lib.rs
test-resources/: Cargo.toml
util/: Cargo.toml
util-derive/: Cargo.toml
util-derive/src/: lib.rs
util/src/: as_any.rs  atomic_cell.rs  atomic_lazy_arc.rs  cache_aligned_vec.rs  cow.rs  debug.rs  default_arc.rs  graph.rs  hash.rs  ident.rs  lazy_dyn_ref.rs  lib.rs  pooled.rs  string_pool.rs  token_rwlock.rs
util/src/derive/: mod.rs
vm-core/: Cargo.toml
vm-core/src/: code.rs  resources.rs  runtime.rs
vm-core/src/memory/: buffer.rs  mod.rs  object.rs  ty.rs
vm-jvm/: Cargo.toml
vm-jvm/src/: class.rs  method.rs  object.rs
vm-jvm/src/class_graph/: annotations.rs  class_loader.rs  executable.rs  field.rs  flags.rs  generate_type.rs  lib.rs  member.rs  modifiers.rs  type.rs
vm-jvm/src/class_graph/class/: lifetime.rs  mod.rs
vm-jvm/src/classfile/: constants.rs  lib.rs  parser.rs
vm-lua/: Cargo.toml  rustfmt.toml
vm-lua-shell/: Cargo.toml
vm-lua-shell/src/: cli.rs  main.rs
vm-lua/benchmarks/: add.lua  inline_cache.lua  linked_list.lua  loop_add.lua
vm-lua/src/: .lib.rs.rustfmt  builder.rs  built_in.rs  error.rs  instruction.rs  ir.rs  lib.rs  lua_lexical.rs  main.rs  mem.rs  syntax.rs
vm-lua/tests/: add.lua  const_string.lua  const_table.lua  exec_lua.rs  function.lua  get_global.lua  if.lua  linked_list.lua  local_var.lua  local_vars.lua  stats.lua  while.lua
vm-shell/: Cargo.toml
vm-shell/src/: cli.rs  main.rs
vm-shell/tests/: lua.rs
vm-wenyan/: Cargo.toml
vm-wenyan/src/: lib.rs  main.rs
