[workspace]
members = [
  "arch",
  "classfile",
  # "class-graph",
  "os",
  "util",
  "jvm-core",
  "memory-impl/memory-mmmu",
  "runtime",
  "runtime-derive",
  "runtime-derive-test",
  "runtime-extra",
  "runtime-test",
  "runtime-impl/llvm-runtime",
  "runtime-impl/interpreter",
  "runtime-memory/runtime-memory-mmmu",
  "test-resources",
  "lexical",
  "lexical-derive",
  "lexical-test",
  "syntax",
  "syntax-derive",
  "syntax-test",
  # "jvm",
  "vm-lua",
  "vm-lua-shell",
  # "vm-jvm",
]
