[workspace]
members = [
  "arch",
  "os",
  "util",
  "vm-core",
  "memory-impl/memory-mmmu",
  "runtime",
  "runtime-derive",
  "runtime-derive-test",
  "runtime-extra",
  "runtime-test",
  "runtime-impl/llvm-runtime",
  "runtime-memory/runtime-memory-mmmu",
  "test-resources",
  "lexical",
  "lexical-derive",
  "lexical-test",
  "syntax",
  "syntax-derive",
  "syntax-test",
  "vm-lua",
  "vm-shell",
  "vm-wenyan",
  # "vm-jvm",
]
