[package]
name = "class-graph"
version = "0.1.0"
authors = ["王子陶 <2451355023@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util={path="../util" }
util-derive={path="../util-derive"}
classfile={path="../classfile"}
jvm-core={path="../jvm-core"}
test-resources={path="../test-resources"}
failure = "0.1.8"
failure_derive = "0.1.8"
getset = "0.1.1"
dashmap ="3.11.7"
crossbeam = "0.8.0"
log = "0.4.0"
env_logger = "0.6.0"
