[package]
name = "jvm"
version = "0.1.0"
authors = ["王子陶 <2451355023@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch={path="../arch"}
class-graph={path="../class-graph"}
classfile={path="../classfile"}
os={path="../os"}
util={path="../util" }
jvm-core={path="../jvm-core"}
memory-mmmu={path="../memory-impl/memory-mmmu"}
runtime={path="../runtime"}
runtime-memory={path="../runtime-memory/runtime-memory-mmmu"}
failure = "0.1.8"
failure_derive = "0.1.8"
log = "0.4.0"
env_logger = "0.6.0"
