[package]
name = "lexical-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical={path="../lexical"}
lexical-derive={path="../lexical-derive"}
failure = "0.1.8"
failure_derive = "0.1.8"
lazy_static = "1.1.1"
