[package]
name = "runtime-derive-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime-derive={path="../runtime-derive"}
runtime-extra={path="../runtime-extra"}
runtime={path="../runtime"}
jvm-core={path="../jvm-core"}
