[package]
name = "test-resources"
version = "0.1.0"
authors = ["王子陶 <2451355023@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util={path="../util"}
failure = "0.1.8"
failure_derive = "0.1.8"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.11.0"
