[package]
name = "util-derive"
version = "0.1.0"
authors = ["王子陶 <2451355023@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
proc-macro = true
[dependencies]
syn = {version="1.0.1",features=["full"]}
quote = "1.0.0"
log = "0.4.0"
env_logger = "0.9.0"
synstructure = "0.12.4"
proc-macro2 = "1.0.27"
