[package]
name = "vm-lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-core={path="../vm-core"}
lexical={path="../lexical"}
lexical-derive={path="../lexical-derive"}
runtime={path="../runtime"}
runtime-derive={path="../runtime-derive"}
runtime-extra={path="../runtime-extra"}
syntax={path="../syntax"}
syntax-derive={path="../syntax-derive"}
memory-mmmu={path="../memory-impl/memory-mmmu"}
failure = "0.1.8"
failure_derive = "0.1.8"
lazy_static = "1.4.0"
util = {path ="../util"}
static-rc = "0.5.0"
phf = "0.11.0"
smallstr = "0.3.0"
smallvec = "1.7.0"
ghost-cell = "0.2.2"
derive_builder = "0.11.2"
getset = "0.1.2"
concat-idents = "1.1.3"
static_assertions = "1.1.0"
log = "0.4.0"
scan_dir = "0.3.3"
env_logger = "0.9.0"
llvm-runtime={path="../runtime-impl/llvm-runtime",optional=true}

[features]
runtime=["llvm-runtime"]

[dev-dependencies]
llvm-runtime={path="../runtime-impl/llvm-runtime"}

[[bin]]
name="vm-lua"
required-features = ["runtime"]

[profile.release]
lto = true

[lib]
crate-type = ["rlib","dylib"]
