[package]
name = "vm-wenyan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical={path="../lexical"}
lexical-derive={path="../lexical-derive/"}
syntax={path="../syntax"}
syntax-derive={path="../syntax-derive/"}
failure = "0.1.8"
vm-lua={path="../vm-lua"}
env_logger = "0.9.0"
log = "0.4.0"
structopt = "0.3.26"
