[package]
name = "memory-mmmu"
version = "0.1.0"
authors = ["王子陶 <2451355023@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-core={path="../../vm-core"}
runtime={path="../../runtime/"}
runtime-extra={path="../../runtime-extra/"}
runtime-derive={path="../../runtime-derive/"}
util={path="../../util" }
util-derive={path="../../util-derive" }
os={path="../../os"}
dashmap = {version="5.2.0",features = ["raw-api"]}
getset = "0.1.1"
crossbeam = "0.8.0"
failure = "0.1.8"
failure_derive = "0.1.8"
log = "0.4.0"
rand = "0.8.4"
num_cpus = "1.13.1"
env_logger = "0.6.0"
lazy_static = "1.4.0"
left-right = "0.11.0"
smallvec = "1.6.1"
tokio = "1.9.0"
libc = "0.2.99"
concat-idents = "1.1.3"
async-trait = "0.1.51"
crossbeam-deque = "0.8.1"
