[package]
name = "llvm-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-core={path="../../vm-core"}
runtime={path="../../runtime"}
# runtime-extra={path="../../runtime-extra"}
# runtime-derive={path="../../runtime-derive"}
util={path="../../util"}
util-derive={path="../../util-derive"}
failure = "0.1.8"
lazy_static = "1.4.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master",default-features = false, features = ["target-x86","llvm10-0"] }
phf = "0.10.0"
getset = "0.1.2"
either = "1.6.1"
libffi = "2.0.0"
arc-swap = "1.5.0"
smallvec = "1.8.0"
